modified controller and view

--- a/scripts/views/sampleForm.html
+++ b/scripts/views/sampleForm.html
@@ -13,7 +13,7 @@
                     sf-options="options"
                     sf-form="sampleForm"
                     sf-model="model"
-                    ng-submit="onSubmit(exampleForm)"
+                    ng-submit="submitform(exampleForm)"
                     >
             <input type="submit" value="Submit" ng-click="submitform()">
             </form>
