--- a/scripts/views/outputForm.html
+++ b/scripts/views/outputForm.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
 
-</body>
-</html>
+<div class="col-md-5 col-md-offset-1">
+    <div ng-controller="SampleFormController">
+        <span ng-bind="outputdata.firstName"></span>
+        <span ng-bind="outputdata.lastName"></span>
+        <span ng-bind="outputdata.location"></span>
+        <span ng-bind="outputdata.phone"></span>
+    </div>
+</div>
+
+
+<!--<sample-directive></sample-directive>-->
+
+<!--<div class="span4 well clearfix"><div class="pull-right" ng-transclude></div></div>-->
